--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/javaweb
 spring.datasource.username=root
-spring.datasource.password=xw6q2Mp10
+spring.datasource.password=<seu pass>
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=jesse.band@gmail.com
-spring.mail.password=iznapnnrrzdrmugj
+spring.mail.password=<sua key do goggle>
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
